updated filtering logic